--- a/package.json
+++ b/package.json
@@ -10,8 +10,26 @@
     "start": "cross-env NODE_ENV=dev webpack serve --config webpack/webpack.dev.js",
     "build": "webpack --config webpack/webpack.prod.js",
     "build:prod": "cross-env NODE_ENV=prod webpack --config webpack/webpack.prod.js",
+    "lint": "eslint src/**/*.{ts,tsx} -f html --cache -o ./eslintError.html",
     "lint:fix": "eslint src/**/*.{ts,tsx} --fix",
-    "prepare": "husky install"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint --config .commitlintrc.js -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js}": [
+      "eslint --config .eslintrc.js"
+    ],
+    "*.{css,less,scss}": [
+      "stylelint --config .stylelintrc.js"
+    ],
+    "*.{ts,tsx,js,json,html,yml,css,less,scss,md}": [
+      "prettier --write"
+    ]
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
@@ -30,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
     "babel-loader": "^8.2.3",
+    "conventional-changelog-cli": "^2.1.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "dotenv-webpack": "^7.0.3",
@@ -43,7 +62,7 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "husky": "^7.0.4",
+    "husky": "^4.3.8",
     "lint-staged": "^11.2.6",
     "mini-css-extract-plugin": "^2.4.4",
     "postcss": "^8.3.11",
